unpackaged/main/default/objects/WOADairy__c/WOADairy__c.object-meta.xml
<CustomObject>
    <label>WOADairy</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>WOADairyID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOAs Dairy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>