unpackaged/main/default/objects/WOADairy__c/fields/Average_lactation_no__c.field-meta.xml
<CustomField>
    <fullName>Average_lactation_no__c</fullName>
    <label>Average lactation no.</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>