unpackaged/main/default/objects/WOADairy__c/fields/Average_Percentage_Of_Score_2_cows__c.field-meta.xml
<CustomField>
    <fullName>Average_Percentage_Of_Score_2_cows__c</fullName>
    <label>Average % Of Score 2 cows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>