unpackaged/main/default/objects/WOADairy__c/fields/Bdy_No_of_swellings_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Bdy_No_of_swellings_Score_2__c</fullName>
    <label>Bdy No. of swellings - Score 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>