unpackaged/main/default/objects/WOADairy__c/fields/Bdy_No_with_lesions__c.field-meta.xml
<CustomField>
    <fullName>Bdy_No_with_lesions__c</fullName>
    <label>Bdy No. with lesions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>