unpackaged/main/default/objects/WOADairy__c/fields/Body_Condition_Fat__c.field-meta.xml
<CustomField>
    <fullName>Body_Condition_Fat__c</fullName>
    <label>Body Condition Fat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>