unpackaged/main/default/objects/WOADairy__c/fields/Body_Condition_Moderate_Good__c.field-meta.xml
<CustomField>
    <fullName>Body_Condition_Moderate_Good__c</fullName>
    <label>Body Condition Moderate-Good</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>