unpackaged/main/default/objects/WOADairy__c/fields/Broken_tails_comment__c.field-meta.xml
<CustomField>
    <fullName>Broken_tails_comment__c</fullName>
    <label>Broken tails comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>