unpackaged/main/default/objects/WOADairy__c/fields/Casualty_cow_reason__c.field-meta.xml
<CustomField>
    <fullName>Casualty_cow_reason__c</fullName>
    <label>Casualty cow reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>