unpackaged/main/default/objects/WOADairy__c/fields/Cleanliness_score_0__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_score_0__c</fullName>
    <label>Cleanliness score 0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>