unpackaged/main/default/objects/WOADairy__c/fields/Cleanliness_score_2__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_score_2__c</fullName>
    <label>Cleanliness score 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>