unpackaged/main/default/objects/WOADairy__c/fields/Detail_of_improv_planned_next12_months__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_improv_planned_next12_months__c</fullName>
    <label>Detail of improv planned next12 months</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>