unpackaged/main/default/objects/WOADairy__c/fields/Detail_of_improvements_in_last12_months__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_improvements_in_last12_months__c</fullName>
    <label>Detail of improvements in last12 months</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>