unpackaged/main/default/objects/WOADairy__c/fields/Details_of_other_hospital_cows__c.field-meta.xml
<CustomField>
    <fullName>Details_of_other_hospital_cows__c</fullName>
    <label>Details of other hospital cows</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>