unpackaged/main/default/objects/WOADairy__c/fields/Dry_Cows_Current_Housing__c.field-meta.xml
<CustomField>
    <fullName>Dry_Cows_Current_Housing__c</fullName>
    <label>Dry Cows Current Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrentHousingDairy</valueSetName>
    </valueSet>
</CustomField>