unpackaged/main/default/objects/WOADairy__c/fields/Enforced_cull_reason__c.field-meta.xml
<CustomField>
    <fullName>Enforced_cull_reason__c</fullName>
    <label>Enforced cull reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>