unpackaged/main/default/objects/WOADairy__c/fields/FL_No_of_swellings_Score_2__c.field-meta.xml
<CustomField>
    <fullName>FL_No_of_swellings_Score_2__c</fullName>
    <label>FL No. of swellings - Score 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>