unpackaged/main/default/objects/WOADairy__c/fields/FL_No_with_hairloss__c.field-meta.xml
<CustomField>
    <fullName>FL_No_with_hairloss__c</fullName>
    <label>FL No. with hairloss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>