unpackaged/main/default/objects/WOADairy__c/fields/Further_care_comment__c.field-meta.xml
<CustomField>
    <fullName>Further_care_comment__c</fullName>
    <label>Further care comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>