unpackaged/main/default/objects/WOADairy__c/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <label>General Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>