unpackaged/main/default/objects/WOADairy__c/fields/HN_No_no_skin_damage_swelling__c.field-meta.xml
<CustomField>
    <fullName>HN_No_no_skin_damage_swelling__c</fullName>
    <label>HN No. no skin damage / swelling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>