unpackaged/main/default/objects/WOADairy__c/fields/HN_No_of_swellings_Score_1__c.field-meta.xml
<CustomField>
    <fullName>HN_No_of_swellings_Score_1__c</fullName>
    <label>HN No. of swellings - Score 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>