unpackaged/main/default/objects/WOADairy__c/fields/HN_No_of_swellings_Score_2__c.field-meta.xml
<CustomField>
    <fullName>HN_No_of_swellings_Score_2__c</fullName>
    <label>HN No. of swellings - Score 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>