unpackaged/main/default/objects/WOADairy__c/fields/HN_No_with_hairloss__c.field-meta.xml
<CustomField>
    <fullName>HN_No_with_hairloss__c</fullName>
    <label>HN No. with hairloss</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>