unpackaged/main/default/objects/WOADairy__c/fields/ImprovementMade__c.field-meta.xml
<CustomField>
    <fullName>ImprovementMade__c</fullName>
    <label>ImprovementMade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Improvement_Changes</valueSetName>
    </valueSet>
</CustomField>