unpackaged/main/default/objects/WOADairy__c/fields/ImprovementPlanned__c.field-meta.xml
<CustomField>
    <fullName>ImprovementPlanned__c</fullName>
    <label>ImprovementPlanned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Improvement_Changes</valueSetName>
    </valueSet>
</CustomField>