unpackaged/main/default/objects/WOADairy__c/fields/Maximum_lactation_no__c.field-meta.xml
<CustomField>
    <fullName>Maximum_lactation_no__c</fullName>
    <label>Maximum lactation no.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>