unpackaged/main/default/objects/WOADairy__c/fields/Milk_Cows_Current_housing__c.field-meta.xml
<CustomField>
    <fullName>Milk_Cows_Current_housing__c</fullName>
    <label>Milk Cows Current housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrentHousingDairy</valueSetName>
    </valueSet>
</CustomField>