unpackaged/main/default/objects/WOADairy__c/fields/Milking__c.field-meta.xml
<CustomField>
    <fullName>Milking__c</fullName>
    <label>Milking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/day</fullName>
            </value>
            <value>
                <fullName>2/day</fullName>
            </value>
            <value>
                <fullName>3/day</fullName>
            </value>
            <value>
                <fullName>robotic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>