unpackaged/main/default/objects/WOADairy__c/fields/Mobility_score_01__c.field-meta.xml
<CustomField>
    <fullName>Mobility_score_01__c</fullName>
    <label>Mobility score 0-1</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>