unpackaged/main/default/objects/WOADairy__c/fields/Mobility_score_3__c.field-meta.xml
<CustomField>
    <fullName>Mobility_score_3__c</fullName>
    <label>Mobility score 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>