unpackaged/main/default/objects/WOADairy__c/fields/Mobility_scoring_carried_out_on_farm__c.field-meta.xml
<CustomField>
    <fullName>Mobility_scoring_carried_out_on_farm__c</fullName>
    <label>Mobility scoring carried out on farm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>