unpackaged/main/default/objects/WOADairy__c/fields/Mobility_scoring_completed_at_pasture__c.field-meta.xml
<CustomField>
    <fullName>Mobility_scoring_completed_at_pasture__c</fullName>
    <label>Mobility scoring completed at pasture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>