unpackaged/main/default/objects/WOADairy__c/fields/Mobility_Scoring_Extra_comments__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Scoring_Extra_comments__c</fullName>
    <label>Mobility Scoring Extra comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>