unpackaged/main/default/objects/WOADairy__c/fields/No_calves__c.field-meta.xml
<CustomField>
    <fullName>No_calves__c</fullName>
    <label>No. calves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>