unpackaged/main/default/objects/WOADairy__c/fields/No_calving_injury__c.field-meta.xml
<CustomField>
    <fullName>No_calving_injury__c</fullName>
    <label>No. calving injury</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>