unpackaged/main/default/objects/WOADairy__c/fields/No_downer_cow__c.field-meta.xml
<CustomField>
    <fullName>No_downer_cow__c</fullName>
    <label>No. downer cow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>