unpackaged/main/default/objects/WOADairy__c/fields/No_heifers__c.field-meta.xml
<CustomField>
    <fullName>No_heifers__c</fullName>
    <label>No. heifers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>