unpackaged/main/default/objects/WOADairy__c/fields/No_lame__c.field-meta.xml
<CustomField>
    <fullName>No_lame__c</fullName>
    <label>No. lame</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>