unpackaged/main/default/objects/WOADairy__c/fields/No_mastitis__c.field-meta.xml
<CustomField>
    <fullName>No_mastitis__c</fullName>
    <label>No. mastitis</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>