unpackaged/main/default/objects/WOADairy__c/fields/No_milking_cows__c.field-meta.xml
<CustomField>
    <fullName>No_milking_cows__c</fullName>
    <label>No. milking cows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>