unpackaged/main/default/objects/WOADairy__c/fields/No_of_broken_tails__c.field-meta.xml
<CustomField>
    <fullName>No_of_broken_tails__c</fullName>
    <label>No. of broken tails</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>