unpackaged/main/default/objects/WOADairy__c/fields/No_of_cases_of_lameness_per_100_cows__c.field-meta.xml
<CustomField>
    <fullName>No_of_cases_of_lameness_per_100_cows__c</fullName>
    <label>No. of cases of lameness per 100 cows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>