unpackaged/main/default/objects/WOADairy__c/fields/No_of_cows_requiring_further_care__c.field-meta.xml
<CustomField>
    <fullName>No_of_cows_requiring_further_care__c</fullName>
    <label>No. of cows requiring further care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>