unpackaged/main/default/objects/WOADairy__c/fields/No_of_Defra_enforced_culls_per_100_cows__c.field-meta.xml
<CustomField>
    <fullName>No_of_Defra_enforced_culls_per_100_cows__c</fullName>
    <label>No. of Defra enforced culls per 100 cows</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>