unpackaged/main/default/objects/WOADairy__c/fields/No_other__c.field-meta.xml
<CustomField>
    <fullName>No_other__c</fullName>
    <label>No. other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>