unpackaged/main/default/objects/WOADairy__c/fields/Other_breeds_crossbreeds__c.field-meta.xml
<CustomField>
    <fullName>Other_breeds_crossbreeds__c</fullName>
    <label>Other breeds/crossbreeds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>