unpackaged/main/default/objects/WOADairy__c/fields/Planned_cull_reason__c.field-meta.xml
<CustomField>
    <fullName>Planned_cull_reason__c</fullName>
    <label>Planned cull reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>