unpackaged/main/default/objects/WOADairy__c/fields/PM_within_0_24hrs_all_calves__c.field-meta.xml
<CustomField>
    <fullName>PM_within_0_24hrs_all_calves__c</fullName>
    <label>PM within 0 - 24hrs (all calves)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>