unpackaged/main/default/objects/WOADairy__c/fields/PM_within_24_hrs_42_days_all_calves__c.field-meta.xml
<CustomField>
    <fullName>PM_within_24_hrs_42_days_all_calves__c</fullName>
    <label>PM within 24 hrs - 42 days (all calves)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>