unpackaged/main/default/objects/WOADairy__c/fields/PMbetween1stcalvi2ndcalvdairy_heifers__c.field-meta.xml
<CustomField>
    <fullName>PMbetween1stcalvi2ndcalvdairy_heifers__c</fullName>
    <label>PMbetween1stcalvi-2ndcalv(dairy heifers)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>