unpackaged/main/default/objects/WOADairy__c/fields/PMwithin42_days1stcalvingdairyheifers__c.field-meta.xml
<CustomField>
    <fullName>PMwithin42_days1stcalvingdairyheifers__c</fullName>
    <label>PMwithin42 days-1stcalving(dairyheifers)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>