unpackaged/main/default/objects/WOADairy__c/fields/Predominant_breed_crossbreed__c.field-meta.xml
<CustomField>
    <fullName>Predominant_breed_crossbreed__c</fullName>
    <label>Predominant breed/crossbreed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>