unpackaged/main/default/objects/WOADairy__c/fields/Reason_for_non_completion_of_WOA__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_non_completion_of_WOA__c</fullName>
    <label>Reason for non-completion of WOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no stock on site</fullName>
            </value>
            <value>
                <fullName>non-audit visit</fullName>
            </value>
            <value>
                <fullName>multiple FF licence holder - more than one WOA generated for visit</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>multiple FF license holder - more then one WOA generated for visit</fullName>
                <isActive>false</isActive>
                <label>multiple FF license holder - more then one WOA generated for visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>