unpackaged/main/default/objects/WOADairy__c/fields/Regular_stockperson__c.field-meta.xml
<CustomField>
    <fullName>Regular_stockperson__c</fullName>
    <label>Regular stockperson</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>