unpackaged/main/default/objects/WOADairy__c/fields/Response_to_stockman__c.field-meta.xml
<CustomField>
    <fullName>Response_to_stockman__c</fullName>
    <label>Response to stockman</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sociable</fullName>
            </value>
            <value>
                <fullName>relaxed</fullName>
            </value>
            <value>
                <fullName>nervous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>