unpackaged/main/default/objects/WOADairy__c/fields/RL_No_no_skin_damage_swelling__c.field-meta.xml
<CustomField>
    <fullName>RL_No_no_skin_damage_swelling__c</fullName>
    <label>RL No. no skin damage / swelling</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>