unpackaged/main/default/objects/WOADairy__c/fields/Unplanned_cull_reason__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_cull_reason__c</fullName>
    <label>Unplanned cull reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>