unpackaged/main/default/objects/WOADairy__c/fields/Wants_advice__c.field-meta.xml
<CustomField>
    <fullName>Wants_advice__c</fullName>
    <label>Wants advice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>