unpackaged/main/default/objects/WOADairy__c/fields/WOA__c.field-meta.xml
<CustomField>
    <fullName>WOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOA</label>
    <referenceTo>WOA__c</referenceTo>
    <relationshipLabel>WOAs Dairy</relationshipLabel>
    <relationshipName>WOAs_Dairy</relationshipName>
    <type>Lookup</type>
</CustomField>